Added setenv.sh file to control catalina opts.